--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+:wq::wq
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
@@ -10,6 +11,9 @@
 
 # production
 /build
+
+/.idea
+ktor-ui.iml
 
 # misc
 .DS_Store
